...
*/

// MARK: - Authentication
"auth.login.title" = "Sign In";
"auth.signup.title" = "Sign Up";
"auth.email.placeholder" = "Email";
"auth.password.placeholder" = "Password";
"auth.password.confirm" = "Confirm Password";
"auth.login.button" = "Sign In";
"auth.signup.button" = "Sign Up";
"auth.forgot.password" = "Forgot Password?";
"auth.reset.password.title" = "Reset Password";
"auth.reset.password.message" = "Instructions will be sent to:";
"auth.send" = "Send";
"auth.cancel" = "Cancel";
"auth.anonymous.button" = "Continue Without Registration";
"auth.welcome.message" = "Welcome to Astrolog";
"auth.create.profile" = "Create Your Astrological Profile";
"auth.sign.in.apple" = "Sign in with Apple";
"auth.sign.in.google" = "Sign in with Google";
"auth.or" = "or";
"auth.no.account" = "Don't have an account?";
"auth.have.account" = "Already have an account?";
"auth.signup.link" = "Sign Up";
"auth.login.link" = "Sign In";
...
